src/nauty_bindings.rs

extern {
    pub fn alloc_error(arg1: *mut ::libc::c_char) -> ();
    pub fn breakout(arg1: *mut ::libc::c_int,
                arg2: *mut ::libc::c_int,
                arg3: ::libc::c_int,
                arg4: ::libc::c_int,
                arg5: ::libc::c_int,
                arg6: *mut set,
                arg7: ::libc::c_int)
                -> ();
    pub fn cheapautom(arg1: *mut ::libc::c_int,
                  arg2: ::libc::c_int,
                  arg3: boolean,
                  arg4: ::libc::c_int)
                  -> boolean;
    pub fn doref(arg1: *mut graph, arg2: *mut ::libc::c_int,
                 arg3: *mut ::libc::c_int, arg4: ::libc::c_int,
                 arg5: *mut ::libc::c_int, arg6: *mut ::libc::c_int,
                 arg7: *mut ::libc::c_int, arg8: *mut set,
                 arg9: *mut ::libc::c_int,
                 arg10:
                     ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                    *mut graph,
                                                                arg2:
                                                                    *mut ::libc::c_int,
                                                                arg3:
                                                                    *mut ::libc::c_int,
                                                                arg4:
                                                                    ::libc::c_int,
                                                                arg5:
                                                                    *mut ::libc::c_int,
                                                                arg6:
                                                                    *mut ::libc::c_int,
                                                                arg7:
                                                                    *mut set,
                                                                arg8:
                                                                    *mut ::libc::c_int,
                                                                arg9:
                                                                    ::libc::c_int,
                                                                arg10:
                                                                    ::libc::c_int)
                                               -> ()>,
                 arg11:
                     ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                    *mut graph,
                                                                arg2:
                                                                    *mut ::libc::c_int,
                                                                arg3:
                                                                    *mut ::libc::c_int,
                                                                arg4:
                                                                    ::libc::c_int,
                                                                arg5:
                                                                    ::libc::c_int,
                                                                arg6:
                                                                    ::libc::c_int,
                                                                arg7:
                                                                    *mut ::libc::c_int,
                                                                arg8:
                                                                    ::libc::c_int,
                                                                arg9: boolean,
                                                                arg10:
                                                                    ::libc::c_int,
                                                                arg11:
                                                                    ::libc::c_int)
                                               -> ()>, arg12: ::libc::c_int,
                 arg13: ::libc::c_int, arg14: ::libc::c_int, arg15: boolean,
                 arg16: ::libc::c_int, arg17: ::libc::c_int) -> ();
    pub fn extra_autom(arg1: *mut ::libc::c_int, arg2: ::libc::c_int) -> ();
    pub fn extra_level(arg1: ::libc::c_int,
                   arg2: *mut ::libc::c_int,
                   arg3: *mut ::libc::c_int,
                   arg4: ::libc::c_int,
                   arg5: ::libc::c_int,
                   arg6: ::libc::c_int,
                   arg7: ::libc::c_int,
                   arg8: ::libc::c_int,
                   arg9: ::libc::c_int)
                   -> ();
    pub fn isautom(arg1: *mut graph,
               arg2: *mut ::libc::c_int,
               arg3: boolean,
               arg4: ::libc::c_int,
               arg5: ::libc::c_int)
               -> boolean;
    pub fn itos(arg1: ::libc::c_int, arg2: *mut ::libc::c_char) -> ::libc::c_int;
    pub fn fmperm(arg1: *mut ::libc::c_int,
              arg2: *mut set,
              arg3: *mut set,
              arg4: ::libc::c_int,
              arg5: ::libc::c_int)
              -> ();
    pub fn fmptn(arg1: *mut ::libc::c_int,
             arg2: *mut ::libc::c_int,
             arg3: ::libc::c_int,
             arg4: *mut set,
             arg5: *mut set,
             arg6: ::libc::c_int,
             arg7: ::libc::c_int)
             -> ();
    pub fn longprune(arg1: *mut set,
                 arg2: *mut set,
                 arg3: *mut set,
                 arg4: *mut set,
                 arg5: ::libc::c_int)
                 -> ();
    pub fn nauty(arg1: *mut graph,
             arg2: *mut ::libc::c_int,
             arg3: *mut ::libc::c_int,
             arg4: *mut set,
             arg5: *mut ::libc::c_int,
             arg6: *mut optionblk,
             arg7: *mut statsblk,
             arg8: *mut set,
             arg9: ::libc::c_int,
             arg10: ::libc::c_int,
             arg11: ::libc::c_int,
             arg12: *mut graph)
             -> ();
    pub fn maketargetcell(arg1: *mut graph, arg2: *mut ::libc::c_int,
                          arg3: *mut ::libc::c_int, arg4: ::libc::c_int,
                          arg5: *mut set, arg6: *mut ::libc::c_int,
                          arg7: *mut ::libc::c_int, arg8: ::libc::c_int,
                          arg9: boolean, arg10: ::libc::c_int,
                          arg11:
                              ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                             *mut graph,
                                                                         arg2:
                                                                             *mut ::libc::c_int,
                                                                         arg3:
                                                                             *mut ::libc::c_int,
                                                                         arg4:
                                                                             ::libc::c_int,
                                                                         arg5:
                                                                             ::libc::c_int,
                                                                         arg6:
                                                                             boolean,
                                                                         arg7:
                                                                             ::libc::c_int,
                                                                         arg8:
                                                                             ::libc::c_int,
                                                                         arg9:
                                                                             ::libc::c_int)
                                                        -> ::libc::c_int>,
                          arg12: ::libc::c_int, arg13: ::libc::c_int) -> ();
    pub fn nextelement(arg1: *mut set, arg2: ::libc::c_int, arg3: ::libc::c_int) -> ::libc::c_int;
    pub fn orbjoin(arg1: *mut ::libc::c_int,
               arg2: *mut ::libc::c_int,
               arg3: ::libc::c_int)
               -> ::libc::c_int;
    pub fn permset(arg1: *mut set,
               arg2: *mut set,
               arg3: ::libc::c_int,
               arg4: *mut ::libc::c_int)
               -> ();
    pub fn putstring(arg1: *mut ::libc::FILE, arg2: *mut ::libc::c_char) -> ();
    pub fn refine(arg1: *mut graph,
              arg2: *mut ::libc::c_int,
              arg3: *mut ::libc::c_int,
              arg4: ::libc::c_int,
              arg5: *mut ::libc::c_int,
              arg6: *mut ::libc::c_int,
              arg7: *mut set,
              arg8: *mut ::libc::c_int,
              arg9: ::libc::c_int,
              arg10: ::libc::c_int)
              -> ();
    pub fn refine1(arg1: *mut graph,
               arg2: *mut ::libc::c_int,
               arg3: *mut ::libc::c_int,
               arg4: ::libc::c_int,
               arg5: *mut ::libc::c_int,
               arg6: *mut ::libc::c_int,
               arg7: *mut set,
               arg8: *mut ::libc::c_int,
               arg9: ::libc::c_int,
               arg10: ::libc::c_int)
               -> ();
    pub fn shortprune(arg1: *mut set, arg2: *mut set, arg3: ::libc::c_int) -> ();
    pub fn targetcell(arg1: *mut graph,
                  arg2: *mut ::libc::c_int,
                  arg3: *mut ::libc::c_int,
                  arg4: ::libc::c_int,
                  arg5: ::libc::c_int,
                  arg6: boolean,
                  arg7: ::libc::c_int,
                  arg8: ::libc::c_int,
                  arg9: ::libc::c_int)
                  -> ::libc::c_int;
    pub fn testcanlab(arg1: *mut graph,
                  arg2: *mut graph,
                  arg3: *mut ::libc::c_int,
                  arg4: *mut ::libc::c_int,
                  arg5: ::libc::c_int,
                  arg6: ::libc::c_int)
                  -> ::libc::c_int;
    pub fn updatecan(arg1: *mut graph,
                 arg2: *mut graph,
                 arg3: *mut ::libc::c_int,
                 arg4: ::libc::c_int,
                 arg5: ::libc::c_int,
                 arg6: ::libc::c_int)
                 -> ();
    pub fn writeperm(arg1: *mut ::libc::FILE,
                 arg2: *mut ::libc::c_int,
                 arg3: boolean,
                 arg4: ::libc::c_int,
                 arg5: ::libc::c_int)
                 -> ();
    pub fn nauty_freedyn() -> ();
    pub fn nauty_check(arg1: ::libc::c_int,
                   arg2: ::libc::c_int,
                   arg3: ::libc::c_int,
                   arg4: ::libc::c_int)
                   -> ();
    pub fn naugraph_check(arg1: ::libc::c_int,
                      arg2: ::libc::c_int,
                      arg3: ::libc::c_int,
                      arg4: ::libc::c_int)
                      -> ();
    pub fn nautil_check(arg1: ::libc::c_int,
                    arg2: ::libc::c_int,
                    arg3: ::libc::c_int,
                    arg4: ::libc::c_int)
                    -> ();
    pub fn nautil_freedyn() -> ();
    pub fn naugraph_freedyn() -> ();
    pub fn densenauty(arg1: *mut graph,
                  arg2: *mut ::libc::c_int,
                  arg3: *mut ::libc::c_int,
                  arg4: *mut ::libc::c_int,
                  arg5: *mut optionblk,
                  arg6: *mut statsblk,
                  arg7: ::libc::c_int,
                  arg8: ::libc::c_int,
                  arg9: *mut graph)
                  -> ();
    pub fn writegroupsize(arg1: *mut ::libc::FILE, arg2: ::libc::c_double, arg3: ::libc::c_int) -> ();
}
